fix: sass overflow: hidden;

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,6 @@ body {
   /* max-width: 1440px; */
   /* margin: auto; */
   /* margin: 2em; */
-  overflow: hidden;
 }
 
 /* .page-header {
